# minefield

./: CMakeLists.txt  main.cpp
app/: cApp.cpp  cApp.h
main/: cMain.cpp  cMain.h
